syntax = "proto3";

option csharp_namespace = "Google.Ads.GoogleAds.Tests";

message HelloRequest {
  string customer_id = 1;
  string name = 2;
  optional int64 age = 3;
  Address address = 4;
}

message Address {
  string line1 = 1;
  optional string line2 = 2;
  optional string city = 3;
  int64 zipcode = 4;
  string state = 5;
}

message HelloStatusEnum {
  // Possible access invitation status of a user
  enum HelloStatus {
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    IN_PROCESS = 2;
    DECLINED = 3;
    EXPIRED = 4;
  }
}

message HelloResponse {
  string name = 1;
  string partial_failure = 2;
}

message HelloStreamRequest {
  string customer_id = 1;
  string name = 2;
  optional int64 age = 3;
  Address address = 4;
}

message HelloStreamResponse {
  string name = 1;
  string partial_failure = 2;
  string request_id = 3;
}

service HelloService {
  rpc Hello (HelloRequest) returns (HelloResponse);
  rpc HelloStream (HelloStreamRequest) returns (stream HelloStreamResponse);
}